fixed login buttons on small media queries

--- a/react-frontend/src/adminLogin.css
+++ b/react-frontend/src/adminLogin.css
@@ -16,6 +16,7 @@
     padding: 20px;
     border:2px solid black;
     border-radius: 1%;
+    min-width: 240px;
 }
 
 .login-button-container {
